Chnage Aos anmation and fix overflow hidden

--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,4 @@
 }
 body{
   background-color: #171a1d;
-  overflow-x: hidden;
 }
